Bug 1789268 - Pass bounds when creating an AdjustedTarget for canvas text with filter or shadow. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D164043